<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_Background"
    android:layout_height="match_parent"
    tools:context=".views.fragments.SignUpFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/app_name"
        android:textColor="@color/color_Text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNewToApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="center"
        android:text="@string/new_to_shaadi_com"
        android:textColor="@color/color_Text"
        app:layout_constraintBottom_toTopOf="@+id/line_signIns" />


    <LinearLayout
        android:id="@+id/line_signIns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
           >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnSignUpEmail"
                android:layout_width="match_parent"
                android:foreground="?attr/selectableItemBackground"

                android:layout_height="40dp"
                android:layout_margin="8dp"

                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Sign Up with Email"
                    android:textAlignment="center"
                    android:textColor="@color/color_Text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnSignUpMobile"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
                >

                <ImageView
                    android:id="@+id/imageViewMobile"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_mobile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sign_up_with_mobile"
                    android:textAlignment="center"
                    android:textColor="@color/color_Text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnSignUpGoogle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
               >

                <ImageView
                    android:id="@+id/imageViewGoogle"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_googl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sign_up_with_google"
                    android:textAlignment="center"
                    android:textColor="@color/color_Text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/already_have_an_account"
                android:textColor="@color/color_Text" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:foreground="?attr/selectableItemBackground"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:background="@drawable/white_round_border"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/color_Text" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>